flapivor/tests/m1/hopix/parser/bad/50-instanciation-4.hopix
val x = id <Int Int>